--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 #home {
     position: relative;
     background: url("../../assets/bgIMG.png");
@@ -62,7 +63,6 @@
     .badge-cmp,
     .tag-cmp {
       padding: 1rem 2rem;
-      background: var(--white-color);
       border-radius: 15px;
       flex-direction: row;
       width: auto;
@@ -76,8 +76,13 @@
   
       p {
         width: 100%;
-        text-transform: uppercase;
         text-align: right;
+        font-weight: 500;
+
+        // span {
+        //     font-family: 'Architects Daughter', cursive;
+        //     font-size: 1em;
+        // }
       }
     }
   
