Front End version 1 almost completed, Now working on backend

--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -25,6 +25,7 @@
       height: 170px;
       border-radius: 15px;
       object-fit: cover;
+      box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
     }
   
     @media screen and (min-width: 2000px) {
