--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -55,6 +55,7 @@
       padding: 1rem;
       border-radius: 0.5rem;
       background-color: #fff;
+      box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
       color: #000;
   
       cursor: pointer;
