--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -87,7 +87,10 @@
         padding: 0.95rem;
         border: none;
         border-radius: 7px;
-        background-color: var(--primary-color);
+        background-color: var(--white-color);
+
+        // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
   
         font-family: var(--font-base);
         color: var(--secondary-color);
