--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 #home {
     position: relative;
-    background: url("../../assets/bgIMG.png");
+    background: url("../../assets/bgWhite.png");
     background-size: cover;
     background-position: center;
     background-repeat: repeat;
@@ -67,7 +67,8 @@
       flex-direction: row;
       width: auto;
   
-      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+      // box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+      box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
     }
   
     .tag-cmp {
