--- a/src/index.css
+++ b/src/index.css
@@ -17,4 +17,6 @@
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
