--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -48,7 +48,8 @@
     align-items: center;
   
     .app__work-item {
-      width: 270px;
+      // width: 270px;
+      width: 290px;
       flex-direction: column;
   
       margin: 2rem;
